// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test locations #164 : expr must include ; 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 2,
            "line": 1,
            "offset": 2,
          },
          "source": "$a",
          "start": Position {
            "column": 0,
            "line": 1,
            "offset": 0,
          },
        },
        "name": "a",
      },
      "loc": Location {
        "end": Position {
          "column": 12,
          "line": 1,
          "offset": 12,
        },
        "source": "$a = $b + 1;",
        "start": Position {
          "column": 0,
          "line": 1,
          "offset": 0,
        },
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "loc": Location {
            "end": Position {
              "column": 7,
              "line": 1,
              "offset": 7,
            },
            "source": "$b",
            "start": Position {
              "column": 5,
              "line": 1,
              "offset": 5,
            },
          },
          "name": "b",
        },
        "loc": Location {
          "end": Position {
            "column": 11,
            "line": 1,
            "offset": 11,
          },
          "source": "$b + 1",
          "start": Position {
            "column": 5,
            "line": 1,
            "offset": 5,
          },
        },
        "right": Number {
          "kind": "number",
          "loc": Location {
            "end": Position {
              "column": 11,
              "line": 1,
              "offset": 11,
            },
            "source": "1",
            "start": Position {
              "column": 10,
              "line": 1,
              "offset": 10,
            },
          },
          "value": "1",
        },
        "type": "+",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 12,
      "line": 1,
      "offset": 12,
    },
    "source": "$a = $b + 1;",
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test locations #164 : expr should avoid ?> 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 8,
            "line": 1,
            "offset": 8,
          },
          "source": "$a",
          "start": Position {
            "column": 6,
            "line": 1,
            "offset": 6,
          },
        },
        "name": "a",
      },
      "loc": Location {
        "end": Position {
          "column": 17,
          "line": 1,
          "offset": 17,
        },
        "source": "$a = $b + 1",
        "start": Position {
          "column": 6,
          "line": 1,
          "offset": 6,
        },
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "loc": Location {
            "end": Position {
              "column": 13,
              "line": 1,
              "offset": 13,
            },
            "source": "$b",
            "start": Position {
              "column": 11,
              "line": 1,
              "offset": 11,
            },
          },
          "name": "b",
        },
        "loc": Location {
          "end": Position {
            "column": 17,
            "line": 1,
            "offset": 17,
          },
          "source": "$b + 1",
          "start": Position {
            "column": 11,
            "line": 1,
            "offset": 11,
          },
        },
        "right": Number {
          "kind": "number",
          "loc": Location {
            "end": Position {
              "column": 17,
              "line": 1,
              "offset": 17,
            },
            "source": "1",
            "start": Position {
              "column": 16,
              "line": 1,
              "offset": 16,
            },
          },
          "value": "1",
        },
        "type": "+",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 20,
      "line": 1,
      "offset": 20,
    },
    "source": "<?php $a = $b + 1 ?>",
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
